// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlightService Should return a list of flights 1`] = `
{
  "arrivalDatetime": "2018-06-15T21:00:00",
  "departure": "DUB",
  "departureDatetime": "2018-06-15T17:25:00",
  "destination": "WRO",
  "flightNumber": "FR153",
}
`;

exports[`User will check the matchers and pass 1`] = `
{
  "createdAt": Any<Date>,
  "id": Any<Number>,
  "name": "LeBron James",
}
`;

exports[`User will check the matchers and pass 2`] = `
{
  "createdAt": Any<Date>,
  "id": Any<Number>,
  "name": Any<String>,
}
`;
